--- a/style.css
+++ b/style.css
@@ -43,11 +43,14 @@ body{
     border-radius: 20px 20px;
     height: 700px;
     width: 450px;
+    max-width: fit-content;
+    min-width: 400px;
     box-shadow: 1px 0 20px 2px rgba(0, 0, 0, 0.5);
 }
 
 .sub-container img{
     border-radius: 20px 20px 0 0;
+    min-width: 400px;
 }
 
 .summary{
@@ -92,6 +95,7 @@ body{
 .annual-plan img{
     width: 50px;
     height: 50px;
+    min-width: 0;
 }
 
 .annual-plan-h1{
@@ -118,13 +122,24 @@ font-family: monospace;
     background: transparent;
     color: hsl(245, 75%, 52%);
 }
+.change:hover{
+    color: hsl(224, 23%, 55%);
+}
+.change:visited{
+    color: hsl(224, 100%, 42%);
 
+}
+.change:active{
+    color: hsl(224, 100%, 29%);
+
+}
 .general-button{
     text-align: center;
 }
 
 
 .proceed-to-payment{
+    cursor: pointer;
     width: 87%;
     height: 40px;
     color: white;
@@ -137,8 +152,13 @@ font-family: monospace;
     box-shadow: 1px 5px 10px 0 rgba(3, 38, 238, 0.5);
 }
 
+.proceed-to-payment:hover{
+    background-color: hsl(224, 23%, 55%);
+}
+
 .cancel{
     margin-top: 20px;
+    cursor: pointer;
     width: 87%;
     background-color: transparent;
     height: 40px;
@@ -148,11 +168,25 @@ font-size: 18px;
 color: hsl(224, 23%, 55%);
 }
 
+.cancel:hover{
+    color: hsl(223, 47%, 23%);
+}
 
 
 
 
 
+@media screen and (max-width: 375px) {
+
+
+.sub-container{
+    width: 250px;
+    margin: 100px 20px;
+}
+.sub-container img{
+    max-width: 100px;
+}
+}
 
 
 
